--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Vite + Vue + TS</title>
   </head>
-  <body>
+  <body style="position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
