--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Vite + Vue + TS</title>
-  </head>
-  <body style="position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;">
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+		<meta name="referrer" content="no-referrer" />
+		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<title>Vite + Vue + TS</title>
+	</head>
+	<body style="position: fixed; top: 0; left: 0; width: 100%; height: 100%">
+		<div id="app"></div>
+		<script type="module" src="/src/main.ts"></script>
+	</body>
 </html>
