--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<title>Vite + Vue + TS</title>
 	</head>
-	<body style="position: fixed; top: 0; left: 0; width: 100%; height: 100%">
+	<body>
 		<div id="app"></div>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
