--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 		<meta name="referrer" content="no-referrer" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 		<title>Vite + Vue + TS</title>
+		<style>
+			@media screen and (orientation: landscape) {
+				#app {
+					width: 51%;
+					margin: 0 auto;
+				}
+			}
+		</style>
 	</head>
 	<body>
 		<div id="app"></div>
