--- a/index.html
+++ b/index.html
@@ -17,7 +17,21 @@
 			}
 		</style>
 	</head>
-	<body>
+	<body
+		style="
+			background-image: linear-gradient(
+				45deg,
+				#fffcfd 25%,
+				#bae5ff 25%,
+				#bae5ff 50%,
+				#fffcfd 50%,
+				#fffcfd 75%,
+				#bae5ff 75%,
+				#bae5ff 100%
+			);
+			background-size: 3.5356rem 3.5356rem;
+		"
+	>
 		<div id="app"></div>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
