--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 		<meta name="referrer" content="no-referrer" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<link rel="icon" type="image/svg+xml" href="/avater.svg" />
 		<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
-		<title>Vite + Vue + TS</title>
+		<title>KUROMIA - 库洛米娅</title>
 		<style>
 			@media screen and (orientation: landscape) {
 				#app {
