--- a/index.html
+++ b/index.html
@@ -8,30 +8,8 @@
 		<link rel="icon" type="image/svg+xml" href="/avater.svg" />
 		<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 		<title>KUROMIA - 库洛米娅</title>
-		<style>
-			@media screen and (orientation: landscape) {
-				#app {
-					width: 50%;
-					margin: 0 auto;
-				}
-			}
-		</style>
 	</head>
-	<body
-		style="
-			background-image: linear-gradient(
-				45deg,
-				#fffcfd 25%,
-				#66bbf922 25%,
-				#d69dff22 50%,
-				#fffcfd 50%,
-				#fffcfd 75%,
-				#ff9a8b22 75%,
-				#d1ac3c22 100%
-			);
-			background-size: 3.5356rem 3.5356rem;
-		"
-	>
+	<body>
 		<div id="app"></div>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
