--- a/index.html
+++ b/index.html
@@ -13,4 +13,16 @@
 		<div id="app"></div>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
+	<style>
+		@media screen and (max-width: 1920px) {
+			:root {
+				font-size: 16px;
+			}
+		}
+		@media screen and (min-width: 1921px) and (max-width: 2560px) {
+			:root {
+				font-size: 32px;
+			}
+		}
+	</style>
 </html>
