--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 		<meta name="referrer" content="no-referrer" />
-		<link rel="icon" type="image/svg+xml" href="/avater.svg" />
+		<link rel="icon" type="image/png" href="/kuromia.png" />
 		<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 		<title>KUROMIA - 库洛米娅</title>
 	</head>
