--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		/>
 		<meta name="referrer" content="no-referrer" />
 		<link rel="icon" type="image/png" href="/kuromia.png" />
-		<title>TAOTAO - 桃桃</title>
+		<title>Taoao - 桃桃</title>
 	</head>
 	<body>
 		<div id="app"></div>
